err/pp20160412212350.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pp20160412212350'...
Compiling './lib/python3.5/site-packages/pp20160412212350/__main__.py'...
***   File "./lib/python3.5/site-packages/pp20160412212350/__main__.py", line 58
    print "Turning on debug mode ..."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pp20160412212350/lib'...
Compiling './lib/python3.5/site-packages/pp20160412212350/lib/cmdcopy.py'...
***   File "./lib/python3.5/site-packages/pp20160412212350/lib/cmdcopy.py", line 2
    print "Copying", args.input, args.output
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pp20160412212350/lib/cmdls.py'...
***   File "./lib/python3.5/site-packages/pp20160412212350/lib/cmdls.py", line 2
    print "Listing", args.file
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pp20160412212350/lib/cmdsum.py'...
***   File "./lib/python3.5/site-packages/pp20160412212350/lib/cmdsum.py", line 27
    print "Calculating the sum of", args.number
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pp20160412212350-0.0.13.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
